Fixed alignment issues

--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -13,11 +13,9 @@ td {
 .toolBar {
   margin: 5px;
   padding: 5px;
-  float: left;
 }
 
 .accountSelectionDiv {
-  float: left;
   padding: 5px;
 }
 .accountSelectionDiv select {
